--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "vue": "^3.2.36",
+        "vue-cookies": "^1.8.1",
         "vue-loader": "^17.0.0"
     }
 }
